/*buildscript {
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath 'com.guardsquare:proguard-gradle:7.7.0'
	}
}*/

plugins {
	id 'fabric-loom' version '1.11-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group
compileJava.options.encoding = 'UTF-8'

base {
	archivesName = project.archives_base_name + '-' + project.minecraft_version
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.4.1")))
}

processResources {
	inputs.property "version", project.version
	//inputs.property "minecraft_version", project.minecraft_version
	inputs.property "loader_version", project.loader_version

	filesMatching("fabric.mod.json") {
		expand "version": project.version/*, "minecraft_version": project.minecraft_version*/, "loader_version": project.loader_version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task if it is present.
	// If you remove this line, sources will not be generated.
	//withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

/*task unmappedJar(type: Jar) {
	archiveClassifier = "unmapped"
	from sourceSets.main.output
}
def compiler = javaToolchains.compilerFor {
	languageVersion = JavaLanguageVersion.of(21)
}
// TODO depends on loom implementation details I don't understand
task ('proguard', type: proguard.gradle.ProGuardTask) {
	dependsOn "unmappedJar"
	configuration 'proguard.conf'
	ignorewarnings
	verbose
	target "21"

	// Workaround for ProGuard seemingly not recognising when the output .jar file doesn't exist
	//outputs.upToDateWhen { false }

	//injars "build/libs/" + project.archives_base_name + "-" + version + "-unmapped.jar"
	//outjars "build/libs/" + project.archives_base_name + "-" + version + "-dev" + ".jar"

	// Get the Java standard library from the provided toolchain.
	libraryjars compiler.get().metadata.installationPath.asFile.absolutePath + "/jmods/java.base.jmod", jarfilter: '!**.jar', filter: '!module-info.class'

	// Add relevant Minecraft libraries to ProGuard's list of libraries to obfuscate against. TODO this is very janky
	libraryjars project.configurations.compileClasspath
}

//artifacts.add('archives', file(proguard.outputs.files.singleFile)) {
//	type='jar'
//	builtBy(proguard)
//}

remapJar.finalizedBy proguard*/